# backtesting-engine

./: .env.example  .gitattributes  .gitignore  .importlinter  AGENTS.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
USAGE/: README.md  backtesting.md  install.md  market-data.md  microstructure-calibration.md  wfo.md
dev_context/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  IMPORT_RULES.md  MODULE_MAP.md  README.md  THIRD_PARTY_NOTICES.md  WRITING_STRATEGY.md  agents.md  code_index.json  code_index.md  code_scope_template.md
docs/adr/: ADR-001-modular-monolith.md  ADR-002-nautilus-runtime-boundary.md  ADR-003-artifact-contract.md  ADR-004-strategy-policy-split.md  ADR-005-statarb-strategy-scope.md  ADR-006-portfolio-weights-and-wfo-contract.md
run_profiles/: fx_single_asset.yaml  fx_statarb_pair.yaml  three_slot_portfolio.yaml
src/backtest_engine/: __init__.py
src/backtest_engine/analytics/: README.md  __init__.py
src/backtest_engine/application/: README.md  __init__.py  _bundle_header.py
src/backtest_engine/bootstrap/: README.md  __init__.py  _execution_adapters.py  _market_data_runtime.py  _stage_events.py  composition_root.py
src/backtest_engine/config/: README.md  __init__.py  calibration.py  calibration_diagnostics.yaml  data.py  execution_costs.py  execution_costs.yaml  nautilus_symbol_map.yaml  optimization.py  portfolio.py  runtime.py  settings.py  ui.py
src/backtest_engine/core/: README.md  __init__.py  annualization.py  enums.py  errors.py  ids.py  market_data_validation.py  money.py  percentages.py  protocols.py  time.py  timeframes.py  types.py
src/backtest_engine/domain/: README.md  __init__.py
src/backtest_engine/infrastructure/: README.md  __init__.py
src/backtest_engine/interfaces/: README.md  __init__.py
src/backtest_engine/strategies/: README.md  __init__.py  package_contracts.py  package_loader.py
tests/architecture/: test_architecture_boundaries.py  test_strategy_package_boundaries.py
tests/fixtures/: nautilus_market_order_strategy.py  nautilus_observing_strategy.py  nautilus_timestamp_fill_model.py
tests/integration/: test_nautilus_execution_policy_smoke.py
tests/unit/analytics/: test_bundle_read_models.py  test_study_read_models.py
tests/unit/application/: test_batch_run_backtests.py  test_bundle_header.py  test_capture_baseline.py  (+7 more)
tools/: build_code_index.py  generate_run_profile_schema.py  project_stats.py
(+273 files in other folders)
